{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 30,
  "lineage": "bce6dfd7-aa6b-c1b8-7a22-e33dec7823b8",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "k3s",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "6443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-12-23T05:46:28.373-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/ecstatic-pod-334509/global/firewalls/k3s",
            "name": "k3s",
            "network": "https://www.googleapis.com/compute/v1/projects/ecstatic-pod-334509/global/networks/terraform-network",
            "priority": 1000,
            "project": "ecstatic-pod-334509",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ecstatic-pod-334509/global/firewalls/k3s",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2021-12-23T05:46:28.374-08:00",
            "deny": [],
            "description": "Creates firewall rule targeting tagged instances",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/ecstatic-pod-334509/global/firewalls/ssh-firewall",
            "name": "ssh-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/ecstatic-pod-334509/global/networks/terraform-network",
            "priority": 1000,
            "project": "ecstatic-pod-334509",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ecstatic-pod-334509/global/firewalls/ssh-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20211212",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/ecstatic-pod-334509/zones/europe-west3-b/disks/knoten-0"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/ecstatic-pod-334509/zones/europe-west3-b/instances/knoten-0",
            "instance_id": "7834825073367785348",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "ssh-keys": "dominic:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDlOcVFmuVYnCS+B921cdNcQC2ao9R7w0ilRELA+iuY/ZaBhNNz0he9YSA3QsQ834W5kBIAtNKt4qoel5bW7lBMd62GacBkJw9VfvEEoCH+f7UAuH4VO5Hc3EDsFhPVHfSPBCHPIrqMOm4PW7wBtQy12j6x1ZEEdQcPWgJgKw+HgKqc1rs7fhanZG1an34J1qUiAVNc0k6/j/neTu0bPYSx2Ove3s7mVoUogCVz8JRWGFoyFxZsnwFS60YVSajCBycjvBIoueUnj4MDaZhntI/aPxiuNJpEJlCL+pw/cH4NSwy42srLfg1pa4QawF0Hcq4tKz0hiGOWFFDMC7G/oCtsa/fQCb/jP7unSRtjX08dSYgKxqjVMospz2IYXG7UvlZ4qgCIUUCvoB8S46eBe68mdupNFEMrBZHwAW2ZwZDQt [...]
            },
            "metadata_fingerprint": "X9YNWJphwmo=",
            "name": "knoten-0",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.159.157.147",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/ecstatic-pod-334509/global/networks/terraform-network",
                "network_ip": "10.156.0.9",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/ecstatic-pod-334509/regions/europe-west3/subnetworks/terraform-network",
                "subnetwork_project": "ecstatic-pod-334509"
              }
            ],
            "project": "ecstatic-pod-334509",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/ecstatic-pod-334509/zones/europe-west3-b/instances/knoten-0",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-west3-b"
          }
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20211212",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/ecstatic-pod-334509/zones/europe-west3-b/disks/knoten-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/ecstatic-pod-334509/zones/europe-west3-b/instances/knoten-1",
            "instance_id": "2766541197666754436",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "ssh-keys": "dominic:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDlOcVFmuVYnCS+B921cdNcQC2ao9R7w0ilRELA+iuY/ZaBhNNz0he9YSA3QsQ834W5kBIAtNKt4qoel5bW7lBMd62GacBkJw9VfvEEoCH+f7UAuH4VO5Hc3EDsFhPVHfSPBCHPIrqMOm4PW7wBtQy12j6x1ZEEdQcPWgJgKw+HgKqc1rs7fhanZG1an34J1qUiAVNc0k6/j/neTu0bPYSx2Ove3s7mVoUogCVz8JRWGFoyFxZsnwFS60YVSajCBycjvBIoueUnj4MDaZhntI/aPxiuNJpEJlCL+pw/cH4NSwy42srLfg1pa4QawF0Hcq4tKz0hiGOWFFDMC7G/oCtsa/fQCb/jP7unSRtjX08dSYgKxqjVMospz2IYXG7UvlZ4qgCIUUCvoB8S46eBe68mdupNFEMrBZHwAW2ZwZDQt [...]
            },
            "metadata_fingerprint": "X9YNWJphwmo=",
            "name": "knoten-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.159.60.206",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/ecstatic-pod-334509/global/networks/terraform-network",
                "network_ip": "10.156.0.8",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/ecstatic-pod-334509/regions/europe-west3/subnetworks/terraform-network",
                "subnetwork_project": "ecstatic-pod-334509"
              }
            ],
            "project": "ecstatic-pod-334509",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/ecstatic-pod-334509/zones/europe-west3-b/instances/knoten-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-west3-b"
          }
        },
        {
          "index_key": 2,
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20211212",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/ecstatic-pod-334509/zones/europe-west3-b/disks/knoten-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/ecstatic-pod-334509/zones/europe-west3-b/instances/knoten-2",
            "instance_id": "5397740061295452036",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "ssh-keys": "dominic:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDlOcVFmuVYnCS+B921cdNcQC2ao9R7w0ilRELA+iuY/ZaBhNNz0he9YSA3QsQ834W5kBIAtNKt4qoel5bW7lBMd62GacBkJw9VfvEEoCH+f7UAuH4VO5Hc3EDsFhPVHfSPBCHPIrqMOm4PW7wBtQy12j6x1ZEEdQcPWgJgKw+HgKqc1rs7fhanZG1an34J1qUiAVNc0k6/j/neTu0bPYSx2Ove3s7mVoUogCVz8JRWGFoyFxZsnwFS60YVSajCBycjvBIoueUnj4MDaZhntI/aPxiuNJpEJlCL+pw/cH4NSwy42srLfg1pa4QawF0Hcq4tKz0hiGOWFFDMC7G/oCtsa/fQCb/jP7unSRtjX08dSYgKxqjVMospz2IYXG7UvlZ4qgCIUUCvoB8S46eBe68mdupNFEMrBZHwAW2ZwZDQt [...]
            },
            "metadata_fingerprint": "X9YNWJphwmo=",
            "name": "knoten-2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.159.232.5",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/ecstatic-pod-334509/global/networks/terraform-network",
                "network_ip": "10.156.0.7",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/ecstatic-pod-334509/regions/europe-west3/subnetworks/terraform-network",
                "subnetwork_project": "ecstatic-pod-334509"
              }
            ],
            "project": "ecstatic-pod-334509",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/ecstatic-pod-334509/zones/europe-west3-b/instances/knoten-2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-west3-b"
          }
        }
      ]
    }
  ]
}